css update for fixing bottom gap header

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -363,12 +363,12 @@ header {
 }
 
 header .intro-text {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 150px;
+    padding-bottom: 0px;
 }
 
 header .intro-text .intro-lead-in {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-family: cursive;
     font-size: 22px;
     /* font-style: italic; */
